kubernetes/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: isik-hapi-pgadmin
spec:
  serviceName: isik-hapi-pgadmin-service
  podManagementPolicy: Parallel
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: pgadmin4
  template:
    metadata:
      labels:
        app: pgadmin4
    spec:
      terminationGracePeriodSeconds: 10
      securityContext:
        fsGroup: 5050
      containers:
        - name: isik-hapi-pgadmin
          image: dpage/pgadmin4:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: isik-hapi-pgadmin-config
              mountPath: /pgadmin4/servers.json
              subPath: servers.json
              readOnly: true
#            - name: pgadmin-data
#              mountPath: /var/lib/pgadmin
      volumes:
        - name: isik-hapi-pgadmin-config
          configMap:
            name: isik-hapi-pgadmin-config
#        - name: pgadmin-data
#          persistentVolumeClaim:
#            claimName: pgadmin-data

---
kind: Service
apiVersion: v1
metadata:
  name: isik-hapi-pgadmin
spec:
  selector:
    app: isik-hapi-pgadmin
  ports:
    - port: 80
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: isik-hapi-pgadmin
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - isik-hapi-pgadmin.med-united.health
      secretName: isik-hapi-pgadmin-tls
  rules:
    - host: isik-hapi-pgadmin.med-united.health
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: isik-hapi-pgadmin
                port:
                  number: 80
